objects/digitsec__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DigitSec_Findings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save as DigitSec Findings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScanCommit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scan the last commit of the user story</description>
        <label>Scan Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scan_all_commits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scan the entire user story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>digitsec</label>
</CustomObject>